load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bootstrap.go"],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/bootstrap",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/customresource:go_default_library",
        "//pkg/api/customresource/v1:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_mlab_lattice_core//pkg/provider:go_default_library",
        "@io_k8s_apiextensions_apiserver//pkg/client/clientset/clientset:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)

go_binary(
    name = "foo",
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/foo",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bootstrap",
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/bootstrap",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
