load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "crd.go",
        "envoy-xds-api.go",
        "main.go",
        "namespaces.go",
        "rbac.go",
    ],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/bootstrap",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/customresource:go_default_library",
        "//pkg/api/customresource/v1:go_default_library",
        "//pkg/constants:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_mlab_lattice_core//pkg/constants:go_default_library",
        "@com_github_mlab_lattice_core//pkg/types:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//extensions/v1beta1:go_default_library",
        "@io_k8s_api//rbac/v1:go_default_library",
        "@io_k8s_apiextensions_apiserver//pkg/client/clientset/clientset:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)

go_binary(
    name = "bootstrap",
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/bootstrap",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
