load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/system/cmd/componentbuild",
    visibility = ["//visibility:public"],
    deps = ["//cmd/componentbuild/app:go_default_library"],
)

go_binary(
    name = "componentbuild",
    importpath = "github.com/mlab-lattice/system/cmd/componentbuild",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
