load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller_manager.go"],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/controller-manager",
    visibility = ["//visibility:public"],
    deps = ["//cmd/controller-manager/app:go_default_library"],
)
