load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["create_build.go"],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/create-build",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/customresource:go_default_library",
        "//pkg/api/customresource/v1:go_default_library",
        "@com_github_mlab_lattice_core//pkg/system/definition/block:go_default_library",
        "@io_k8s_apiextensions_apiserver//pkg/client/clientset/clientset:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)

go_binary(
    name = "create-build",
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/create-build",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
