load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/deprovision-system",
    visibility = ["//visibility:private"],
    deps = ["//pkg/util/minikube:go_default_library"],
)

go_binary(
    name = "provision-system",
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/provision-system",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "deprovision-system",
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/deprovision-system",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
