load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/system/cmd/foo",
    visibility = ["//visibility:public"],
    deps = ["//pkg/cli/command:go_default_library"],
)

go_binary(
    name = "latticectlv2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "latticectl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "foo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
