load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["docgen.go"],
    importpath = "github.com/mlab-lattice/lattice/cmd/generate-latticectl-docs",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/latticectl:go_default_library",
        "//pkg/util/cli2/docgen:go_default_library",
    ],
)

go_binary(
    name = "generate-latticectl-docs",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
