load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/lattice/cmd/latticectl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/latticectl:go_default_library",
        "//pkg/latticectl/command/bootstrap:go_default_library",
        "//pkg/latticectl/command/bootstrap/kubernetes:go_default_library",
        "//pkg/latticectl/command/context:go_default_library",
        "//pkg/latticectl/command/local:go_default_library",
        "//pkg/latticectl/command/systems:go_default_library",
        "//pkg/latticectl/command/systems/deploys:go_default_library",
        "//pkg/latticectl/command/systems/secrets:go_default_library",
    ],
)

go_binary(
    name = "latticectlv2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "latticectl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
