load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/lattice/cmd/latticectl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/latticectl:go_default_library",
        "//pkg/latticectl/commands/context:go_default_library",
        "//pkg/latticectl/commands/kubernetes:go_default_library",
        "//pkg/latticectl/commands/kubernetes/bootstrap:go_default_library",
        "//pkg/latticectl/commands/local:go_default_library",
        "//pkg/latticectl/commands/services:go_default_library",
        "//pkg/latticectl/commands/systems:go_default_library",
        "//pkg/latticectl/commands/systems/builds:go_default_library",
        "//pkg/latticectl/commands/systems/deploys:go_default_library",
        "//pkg/latticectl/commands/systems/secrets:go_default_library",
        "//pkg/latticectl/commands/systems/teardowns:go_default_library",
    ],
)

go_binary(
    name = "latticectl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
