load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/system",
    visibility = ["//visibility:private"],
    deps = ["//cmd/system/app:go_default_library"],
)

go_binary(
    name = "system",
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/system",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
