load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["e2e_test.go"],
    embed = [":go_default_library"],
    tags = ["local"],
)

go_library(
    name = "go_default_library",
    srcs = ["e2e.go"],
    importpath = "github.com/mlab-lattice/lattice/e2e/test",
    visibility = ["//visibility:public"],
    deps = [
        "//e2e/test/context:go_default_library",
        "//e2e/test/system:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
