load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "component_builds.go",
        "output.go",
        "rollouts.go",
        "service.go",
        "service_builds.go",
        "system.go",
        "system_builds.go",
        "teardowns.go",
        "utils.go",
    ],
    importpath = "github.com/mlab-lattice/system/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
    ],
)
