load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "builder.go",
        "docker.go",
        "git.go",
        "status_updater.go",
    ],
    importpath = "github.com/mlab-lattice/system/pkg/componentbuild",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/tar:go_default_library",
        "@com_github_docker_docker//api/types:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
        "@com_github_docker_docker//pkg/jsonmessage:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_mlab_lattice_core//pkg/system/definition/block:go_default_library",
        "@com_github_mlab_lattice_core//pkg/util/git:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
