load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "backend.go",
        "definition.go",
        "docker.go",
        "provider.go",
        "system.go",
    ],
    importpath = "github.com/mlab-lattice/system/pkg/constants",
    visibility = ["//visibility:public"],
    deps = ["//pkg/types:go_default_library"],
)
