load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "interface.go",
        "service.go",
        "system.go",
    ],
    importpath = "github.com/mlab-lattice/system/pkg/definition",
    visibility = ["//visibility:public"],
    deps = ["//pkg/definition/block:go_default_library"],
)
