load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "interface.go",
        "service.go",
        "system.go",
    ],
    importpath = "github.com/mlab-lattice/system/pkg/definition",
    visibility = ["//visibility:public"],
    deps = ["//pkg/definition/block:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "service_test.go",
        "system_test.go",
        "test_utils_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/mlab-lattice/system/pkg/definition",
    deps = [
        "//pkg/definition/block:go_default_library",
        "//pkg/definition/block/mock:go_default_library",
        "//pkg/util/json:go_default_library",
    ],
)
