load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "command.go",
        "context.go",
        "latticectl.go",
    ],
    importpath = "github.com/mlab-lattice/system/pkg/latticectl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/client/rest:go_default_library",
        "//pkg/api/client/v1:go_default_library",
        "//pkg/api/v1:go_default_library",
        "//pkg/latticectl/config:go_default_library",
        "//pkg/util/cli:go_default_library",
    ],
)
