load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "builds.go",
        "context.go",
        "deploy.go",
        "deploys.go",
        "root.go",
        "secrets.go",
        "systems.go",
        "teardown.go",
        "teardowns.go",
    ],
    importpath = "github.com/mlab-lattice/lattice/pkg/latticectl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/client:go_default_library",
        "//pkg/api/v1:go_default_library",
        "//pkg/definition/tree:go_default_library",
        "//pkg/latticectl/builds:go_default_library",
        "//pkg/latticectl/command:go_default_library",
        "//pkg/latticectl/context:go_default_library",
        "//pkg/latticectl/deploys:go_default_library",
        "//pkg/latticectl/secrets:go_default_library",
        "//pkg/latticectl/systems:go_default_library",
        "//pkg/latticectl/teardowns:go_default_library",
        "//pkg/util/cli2:go_default_library",
        "//pkg/util/cli2/color:go_default_library",
        "//pkg/util/cli2/flags:go_default_library",
        "//pkg/util/cli2/printer:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
    ],
)
