load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "github.com/mlab-lattice/lattice/pkg/latticectl2",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/latticectl2/context:go_default_library",
        "//pkg/latticectl2/systems:go_default_library",
        "//pkg/util/cli2:go_default_library",
    ],
)
