load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dispatcher.go",
        "interface.go",
    ],
    importpath = "github.com/mlab-lattice/kubernetes-integration/pkg/provider",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/provider/local:go_default_library",
        "@com_github_mlab_lattice_core//pkg/constants:go_default_library",
    ],
)
