load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/kubernetes-integration/test/system-build",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/system-environment-manager/backend:go_default_library",
        "@com_github_mlab_lattice_core//pkg/constants:go_default_library",
        "@com_github_mlab_lattice_core//pkg/system/definition:go_default_library",
        "@com_github_mlab_lattice_core//pkg/system/definition/block:go_default_library",
        "@com_github_mlab_lattice_core//pkg/system/tree:go_default_library",
    ],
)

go_binary(
    name = "system-build",
    importpath = "github.com/mlab-lattice/kubernetes-integration/test/system-build",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
