load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mlab-lattice/system/cmd/cli/admin",
    visibility = ["//visibility:private"],
    deps = ["//cmd/cli/admin/app:go_default_library"],
)

go_binary(
    name = "admin",
    embed = [":go_default_library"],
    importpath = "github.com/mlab-lattice/system/cmd/cli/admin",
    visibility = ["//visibility:public"],
)
