load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "deprovision_system.go",
        "provision_system.go",
        "provisioner.go",
        "root.go",
    ],
    importpath = "github.com/mlab-lattice/system/cmd/cli/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kubernetes/system-environment/lifecycle:go_default_library",
        "@com_github_mlab_lattice_core//pkg/constants:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
