load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "component_build.go",
        "controller_manager.go",
    ],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/controller-manager/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/customresource:go_default_library",
        "//pkg/api/customresource/v1:go_default_library",
        "//pkg/controller/componentbuild:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/fields:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)
