load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller_manager.go"],
    importpath = "github.com/mlab-lattice/kubernetes-integration/cmd/controller-manager/app",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/controller-manager/app/common:go_default_library",
        "//cmd/controller-manager/app/kubernetescontrollers:go_default_library",
        "//cmd/controller-manager/app/latticecontrollers:go_default_library",
        "//pkg/api/customresource:go_default_library",
        "//pkg/api/customresource/v1:go_default_library",
        "//pkg/provider:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/fields:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)
